_cache/v0.20.2/opencv/specs.md
---
title: "opencv"
layout: cache
categories: [package, v0.20.2]
meta: {"versions": ["4.6.0"], "compilers": ["gcc@=11.4.0"], "oss": ["ubuntu22.04"], "platforms": ["linux"], "targets": ["x86_64_v3"], "stacks": ["ml-linux-x86_64-cpu", "ml-linux-x86_64-cuda", "ml-linux-x86_64-rocm", "root"], "num_specs": 2, "num_specs_by_stack": {"root": 2, "ml-linux-x86_64-rocm": 1, "ml-linux-x86_64-cpu": 1, "ml-linux-x86_64-cuda": 1}}
spec_details: [{"hash": "x2rmajdmiztz6uw5b5brrtmtwoie4b6x", "compiler": "gcc@=11.4.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["root", "ml-linux-x86_64-rocm", "ml-linux-x86_64-cpu"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20.2/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.4.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.4.0-opencv-4.6.0-x2rmajdmiztz6uw5b5brrtmtwoie4b6x.spack"}, {"hash": "3gliyunkpa2cxl6ghxv6jmec7aqtqsky", "compiler": "gcc@=11.4.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "+cuda", "cuda_arch=80", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "+cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["ml-linux-x86_64-cuda", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20.2/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.4.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.4.0-opencv-4.6.0-3gliyunkpa2cxl6ghxv6jmec7aqtqsky.spack"}]
---