_cache/v0.22.0/opencv/specs.md
---
title: "opencv"
layout: cache
categories: [package, v0.22.0]
meta: {"versions": ["4.8.0"], "compilers": ["gcc@=11.4.0", "gcc@=9.4.0", "oneapi@=2024.0.0"], "oss": ["ubuntu20.04", "ubuntu22.04"], "platforms": ["linux"], "targets": ["neoverse_v1", "neoverse_v2", "ppc64le", "x86_64_v3"], "stacks": ["e4s", "e4s-neoverse-v2", "e4s-neoverse_v1", "e4s-oneapi", "e4s-power", "root"], "num_specs": 5, "num_specs_by_stack": {"e4s-power": 1, "root": 5, "e4s-neoverse_v1": 1, "e4s-neoverse-v2": 1, "e4s": 1, "e4s-oneapi": 1}}
spec_details: [{"hash": "zypl7g2xd465si7luxeglmihamacwwlf", "compiler": "gcc@=9.4.0", "versions": ["4.8.0"], "os": "ubuntu20.04", "platform": "linux", "target": "ppc64le", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "~highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "~imgcodecs", "~imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "+python3", "+python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["e4s-power", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.22.0/build_cache/linux-ubuntu20.04-ppc64le/gcc-9.4.0/opencv-4.8.0/linux-ubuntu20.04-ppc64le-gcc-9.4.0-opencv-4.8.0-zypl7g2xd465si7luxeglmihamacwwlf.spack"}, {"hash": "6xol7ztt2cbd3uiiwjphxgqlai4mh2dh", "compiler": "gcc@=11.4.0", "versions": ["4.8.0"], "os": "ubuntu22.04", "platform": "linux", "target": "neoverse_v1", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "~highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "~imgcodecs", "~imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "+python3", "+python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["e4s-neoverse_v1", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.22.0/build_cache/linux-ubuntu22.04-neoverse_v1/gcc-11.4.0/opencv-4.8.0/linux-ubuntu22.04-neoverse_v1-gcc-11.4.0-opencv-4.8.0-6xol7ztt2cbd3uiiwjphxgqlai4mh2dh.spack"}, {"hash": "s5okjbdrsosurhdrfsjyidt7fowllogv", "compiler": "gcc@=11.4.0", "versions": ["4.8.0"], "os": "ubuntu22.04", "platform": "linux", "target": "neoverse_v2", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "~highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "~imgcodecs", "~imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "+python3", "+python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["root", "e4s-neoverse-v2"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.22.0/build_cache/linux-ubuntu22.04-neoverse_v2/gcc-11.4.0/opencv-4.8.0/linux-ubuntu22.04-neoverse_v2-gcc-11.4.0-opencv-4.8.0-s5okjbdrsosurhdrfsjyidt7fowllogv.spack"}, {"hash": "zuccsqv6bfdlily6rufgln4gznimq2oh", "compiler": "gcc@=11.4.0", "versions": ["4.8.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "~highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "~imgcodecs", "~imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "+python3", "+python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["root", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.22.0/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.4.0/opencv-4.8.0/linux-ubuntu22.04-x86_64_v3-gcc-11.4.0-opencv-4.8.0-zuccsqv6bfdlily6rufgln4gznimq2oh.spack"}, {"hash": "fw5bitaks7dntrhxussgdjvooxkrvs2v", "compiler": "oneapi@=2024.0.0", "versions": ["4.8.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "~highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "~imgcodecs", "~imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "+python3", "+python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["root", "e4s-oneapi"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.22.0/build_cache/linux-ubuntu22.04-x86_64_v3/oneapi-2024.0.0/opencv-4.8.0/linux-ubuntu22.04-x86_64_v3-oneapi-2024.0.0-opencv-4.8.0-fw5bitaks7dntrhxussgdjvooxkrvs2v.spack"}]
---